# d0029e-ctf

chal1/: Cargo.toml
chal1/src/: main.rs  scan.rs  skipseq.rs
chal2/: Cargo.toml
chal2/src/: main.rs  scan.rs
chal3/: injection.sql
chal4/: main.py
chal5/: main.py
