[package]
name = "chal2"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
regex = { version = "1.11.3", features = ["perf-dfa-full"] }
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
